# fastapi_17112023

./: .gitignore  README.md  conftest.py  constants.py  main.py  pyproject.toml  schemas.py  storage.py
api/: api_books.py
templates/: arriving_schema.html  base.html  details.html  http404.html  index.html  new_book.html
tests/: test_root.py
web/: web_books.py
