[tool.poetry]
name = "fastapi-17112023"
version = "0.1.0"
description = "for portfolio"
authors = ["Василь Картичак <w.i.k.mailua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
